Adapt analysis menu style.

--- a/src/analysis/analysis.css
+++ b/src/analysis/analysis.css
@@ -1,3 +1,9 @@
+.analysis-menu {
+    background-color: white;
+    box-shadow: 2px 2px 5px 1px lightgrey;
+}
+
+
 .analysis-container {
     display: flex;
     overflow: scroll;
