--- a/src/analysis/analysis.css
+++ b/src/analysis/analysis.css
@@ -1,6 +1,8 @@
 .analysis-menu {
     background-color: white;
     box-shadow: 2px 2px 5px 1px lightgrey;
+    border: 1px solid lightgrey;
+    border-radius: 5px;
 }
 
 
