--- a/src/analysis/analysis.css
+++ b/src/analysis/analysis.css
@@ -14,15 +14,44 @@
 }
 
 .analysis-container {
-    display: flex;
-    overflow: scroll;
+    bottom: 0;
+    left: 0;
+    margin-bottom: 8px;
+    overflow-x: auto;
+    overflow-y: hidden;
+    padding-bottom: 8px;
+    position: absolute;
+    right: 0;
+    top: 80px;
+    -webkit-user-select: none;
+    user-select: none;
+    white-space: nowrap;
+
 }
 
 .analysis-col {
-    /*position: relative;
-    bottom: 0;*/
-    margin: 25px 10px 10px 10px;
-    width: 600px;
-    min-width: 500px;
-    max-width: 100%;
+    border-radius: 10px;
+    box-sizing: border-box;
+    display: inline-block;
+    height: 100%;
+    margin: 0 15px;
+    vertical-align: top;
+    white-space: nowrap;
+    width: 500px;
+    background-color: rgb(244,240,236);
+    padding-top: 10px;
+    padding-bottom: 40px;
+    padding-right: 5px;
+    padding-left: 5px;
+}
+
+.analysis-col-content {
+    height: 100%;
+    flex: 1 1 auto;
+    margin: 10px 4px;
+    min-height: 0;
+    overflow-x: hidden;
+    overflow-y: auto;
+    padding: 0 4px;
+    z-index: 1;
 }
