--- a/src/analysis/analysis.css
+++ b/src/analysis/analysis.css
@@ -27,7 +27,7 @@
     -webkit-user-select: none;
     user-select: none;
     white-space: nowrap;
-    background-image: linear-gradient(to bottom, deepskyblue,lightblue,lightblue,linen, lightpink);
+    background-image: linear-gradient(to bottom, darkblue, blue,darkblue,rebeccapurple, darkorange);
     /*
      background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/Blue_sky_and_sea.jpg/2560px-Blue_sky_and_sea.jpg")
      */
