Decrease space between menu items.

--- a/src/analysis_steps/AnalysisStep.css
+++ b/src/analysis_steps/AnalysisStep.css
@@ -16,3 +16,8 @@
     font-style: italic;
     white-space: pre-line;
 }
+
+.narrow-menu {
+    margin-top: 0px !important;
+    margin-bottom: 0px !important;
+}
