--- a/src/analysis/analysis.css
+++ b/src/analysis/analysis.css
@@ -27,12 +27,7 @@
     -webkit-user-select: none;
     user-select: none;
     white-space: nowrap;
-    background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(1,0,41,0),rgba(0,0,139,0.5),rebeccapurple, darkorange), url("https://cdn2.picryl.com/photo/2020/01/01/andromeda-galaxy-in-acadias-night-sky-5a2e3f-1024.jpg");
-    /*
-    background-image: linear-gradient(to bottom, black, #010029,darkblue,rebeccapurple, darkorange);
-     background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/Blue_sky_and_sea.jpg/2560px-Blue_sky_and_sea.jpg")
-     */
-
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(1,0,41,0),rgba(0,0,139,0.5),rebeccapurple, darkorange), url("andromeda.jpg");
 }
 
 .copy-from-title {
