Add shortcuts for menu.

--- a/src/analysis/analysis.css
+++ b/src/analysis/analysis.css
@@ -3,6 +3,7 @@
     box-shadow: 2px 2px 5px 1px lightgrey;
     border: 1px solid lightgrey;
     border-radius: 5px;
+    width: 270px;
 }
 
 .analysis-menu-title {
