Show analysis larger if there is only one analysis.

--- a/src/analysis/analysis.css
+++ b/src/analysis/analysis.css
@@ -52,7 +52,7 @@
     horiz-align: left;
     white-space: nowrap;
     /* width: 500px; */
-    width: 45%;
+    /*width: 65%;*/
     background-color: rgb(244,240,236);
     padding: 10px 5px 40px;
 }
