Change order of params and results and table.

--- a/src/analysis_steps/AnalysisStep.css
+++ b/src/analysis_steps/AnalysisStep.css
@@ -73,3 +73,12 @@
 .analysis-step-row {
     font-size: small;
 }
+
+.analysis-step-row-end {
+    font-size: small;
+    justify-content: end;
+}
+
+.analysis-step-middle-col {
+    padding-left: 15px;
+}
