--- a/src/analysis/analysis.css
+++ b/src/analysis/analysis.css
@@ -28,7 +28,7 @@
     -webkit-user-select: none;
     user-select: none;
     white-space: nowrap;
-    background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(1,0,41,0),rgba(0,0,139,0.5),rebeccapurple, darkorange), url("andromeda.jpg");
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0), rgba(1,0,41,0),rgba(0,0,139,0.5),rebeccapurple), url("andromeda.jpg");
 }
 
 .copy-from-title {
