Change step menu button look.

--- a/src/analysis/analysis.css
+++ b/src/analysis/analysis.css
@@ -29,7 +29,7 @@
     user-select: none;
     white-space: nowrap;
     background-image: url("blue_sky.jpg");
-    background-size: contain;
+    background-size: cover;
 }
 
 .copy-from-title {
