--- a/src/analysis_steps/AnalysisStep.css
+++ b/src/analysis_steps/AnalysisStep.css
@@ -1,7 +1,8 @@
 .analysis-step-card {
     margin-bottom: 10px;
-    box-shadow: 2px 2px 5px 1px lightgrey;
+    box-shadow: 2px 2px 5px 1px grey;
     border-radius: 5px;
+    margin-top: 10px;
 }
 
 .analysis-step-sel {
@@ -36,8 +37,8 @@
 }
 
 .analysis-step-param-box {
-    border: 1px solid #91caff;
-    background-color: #e6f4ff;
+    border: 1px solid grey;
+    background-color: #FCFBFA;
     border-radius: 5px;
 }
 
@@ -83,27 +84,15 @@
     padding-left: 15px;
 }
 
-.step-menu-button {
-    background: white;
-    border-color: #096dd9;
-    color: #096dd9;
-}
-
-.step-menu-button:hover {
-    background: white;
-    border-color: #91d5ff;
-    color: #91d5ff;
-}
-
 .table-download-button {
-    background: white;
-    border-color: #fa8c16;
-    color: #fa8c16;
+    background: #b5f5ec;
+    border-color: grey;
+    color: black;
     border-width: 1px;
 }
 
 .table-download-button:hover {
-    background: white;
-    border-color: #ffc069;
-    color: #ffc069;
+    background: #e6fffb;
+    border-color: grey;
+    color: black;
 }
