--- a/src/analysis/analysis.css
+++ b/src/analysis/analysis.css
@@ -25,9 +25,11 @@
     position: absolute;
     right: 0;
     top: 60px;
+    /*
     -webkit-user-select: none;
     user-select: none;
     white-space: nowrap;
+     */
     background-image: url("blue_sky.jpg");
     background-size: cover;
 }
