--- a/src/hints/hints.css
+++ b/src/hints/hints.css
@@ -1,10 +1,22 @@
-.hints-box {
+#hints {
     position: absolute;
-    top: 30px;
-    left: 10px;
+    display: flex;
+    top: 10px;
+    left: 20px;
+    width: 16%;
+    height: 100%;
+}
+
+#hints-box.hidden {
+    width: 0%;
+    height: 0%;
+    visibility: hidden;
+}
+
+#hints-box {
     border-radius: 2px;
     height: 100%;
-    width: 15%;
+    width: 100%;
     vertical-align: top;
     horiz-align: left;
     white-space: nowrap;
@@ -14,6 +26,11 @@
     padding: 5px 5px 40px;
     overflow-x: hidden;
     overflow-y: auto;
+    transition: all 0.3s linear;
+}
+
+.hints-button {
+    horiz-align: left;
 }
 
 .hint-card {
