--- a/src/hints/hints.css
+++ b/src/hints/hints.css
@@ -5,6 +5,12 @@
     left: 20px;
     width: 16%;
     height: 100%;
+    transition: all 0.3s linear;
+}
+
+#hints.hidden {
+    width: 40px;
+    height: 10px;
 }
 
 #hints-box.hidden {
