--- a/src/analysis/analysis.css
+++ b/src/analysis/analysis.css
@@ -65,7 +65,7 @@
     width: 99%;
     height: 100%;
     flex: 1 1 auto;
-    margin: 10px 4px;
+    margin: 0 4px 10px;
     min-height: 0;
     overflow-x: hidden;
     overflow-y: auto;
