--- a/src/analysis_steps/AnalysisStep.css
+++ b/src/analysis_steps/AnalysisStep.css
@@ -97,3 +97,24 @@
     border-color: grey;
     color: black;
 }
+
+.color-input {
+    margin:0;
+    padding:0;
+    border:0;
+    width:25px;
+    height:20px;
+}
+
+.color-input:hover {
+    cursor: pointer;
+}
+
+.color-input::-webkit-color-swatch-wrapper {
+    padding: 0;
+    margin:0;
+    background:none;
+}
+.color-input::-webkit-color-swatch {
+    border: none;
+}
